aggiungo regole css

--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
             <div class="card">
                 <!-- lista che l'utente compilerà -->
                 <ul>
-                    <li class="lista">
+                    <li class="list">
                         {{toDoList}}
                         <!-- inserire icone per checkare e per togliere le tasks -->
+                        <div class="col-icons">
+                            <div>done</div>
+                            <div>remove</div>
+                        </div>
                     </li>
                 </ul>
                 <!-- messaggio per to do list vuoto -->
