--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,12 +31,14 @@
             <div class="card">
                 <!-- lista che l'utente compilerà -->
                 <ul>
-                    <li class="list">
-                        {{toDoList}}
+                    <li class="list" v-for="(task, index) in toDoList" :key="index">
+                        <div class="col-text">
+                            {{task.text}}
+                        </div>
                         <!-- inserire icone per checkare e per togliere le tasks -->
                         <div class="col-icons">
-                            <div>done</div>
-                            <div>remove</div>
+                            <input type="checkbox" name="done" id="">
+                            <i class="fa-solid fa-xmark"></i>
                         </div>
                     </li>
                 </ul>
