--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
         <main>
             <!-- input tasks -->
-            <input type="text" name="" id="" placeholder="Inserisci task">
+            <input type="text" placeholder="Inserisci task" v-model="taskText" @keyup.enter="addTask">
             <!-- bottone per aggiungere tasks -->
-            <button>Aggiungi</button>
-            <!-- messaggio di errore per input tasks -->
-            <!-- <h2>Devi inserire almeno 5 caratteri</h2> -->
+            <button @click="addTask">Aggiungi</button>
+            
 
             <!-- card to do list -->
             <div class="card">
@@ -42,8 +41,7 @@
                         </div>
                     </li>
                 </ul>
-                <!-- messaggio per to do list vuoto -->
-                <!-- <h2>Al momento non hai tasks</h2> -->
+                
             </div>
         </main>
     </div>
